--- a/admin-perfil.html
+++ b/admin-perfil.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="info-items">
                         <img src="img/address.png" alt="" class="icon">
-                        <p class="info">Alajuela, Alajuela, San Rafael</p>
+                        <p class="info">Alajuela, Central, San Rafael</p>
                     </div>
                 </div>
                 <div class="grupo-perfil">
